# latex-bibliography-helper

./: .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  bib_util.py  dblp.py  find.py  latex_bib_helper.py  latex_helper.py  pretty-order.txt  pretty.py  setup  setup.cfg
bibhelper/: .latex_bibtex_helper_config.json  __init__.py  __main__.py  beautify.py  config.py  find.py  grep.py  handler_util.py  util.py
bibhelper/handler/: bibtex_handler.py  latex_handler.py
bibhelper/resources/: config.schema.json  latex_bibtex_helper_config.json
bibhelper/tests/: test_bibtex_handler.py  test_latex_handler.py
latex-bibliogrphay-helper/: beautify.py  bib_util.py  find.py  latex_bib_helper.py
latex_bibliography_helper/: __main__.py  beautify.py  bib_util.py  bibtex_handler.py  config.json  config.py  dblp.py  example-config.json  find.py  latex_bib_helper.py  latex_handler.py  pretty.py  util.py
latex_bibliography_helper/handler/: bibtex_handler.py
latex_bibliography_helper/resources/: config.schema.json
latex_bibliography_helper/tests/: test_bib_util.py  test_bibtex_handler.py  test_latex_handler.py
