[metadata]
name = bibhelper
version = attr: bibhelper.__version__
description = Tool to assist reference management with BibTeX.
long_description = file: README.mda
author = Michael Fruth
maintainer = Michael Fruth
keywords = BibTeX, DBLP, LaTeX, Bibliography
license = MIT

[options]
include_package_data=True
packages = find:
python_requires = >= 3.10
install_requires =
    requests
    bibtexparser @ git+https://github.com/michaelfruth/python-bibtexparser@main#egg=bibtexparser
    pyperclip
    jsonschema
    pytest

[options.entry_points]
console_scripts =
    latex_bib_helper = bibhelper.__main__:main